--- a/notebooks/intro/RE.ipynb
+++ b/notebooks/intro/RE.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +103,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Find all numbers: ['2', '13']\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = re.findall(r'\\d+', 'There are 2 apples and 13 oranges.')\n",
+    "print(\"Find all numbers:\", results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Find all numbers: ['2', '1', '3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = re.findall(r'\\d', 'There are 2 apples and 13 oranges.')\n",
+    "print(\"Find all numbers:\", results)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -149,7 +185,7 @@
    ],
    "source": [
     "parts = re.split(r'\\s+', 'Split this string by spaces.')\n",
-    "print(\"Split parts:\", parts)\n"
+    "print(\"Split parts:\", parts)"
    ]
   },
   {
@@ -476,7 +512,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -490,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
