--- a/notebooks/intro/01 RE.ipynb
+++ b/notebooks/intro/01 RE.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# RE "
+    "# Python RegEx"
    ]
   },
   {
