--- a/notebooks/classification/spam_classification.ipynb
+++ b/notebooks/classification/spam_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "20            you have a new message from your friend  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "[5572 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -756,6 +756,209 @@
     "print(f'Accuracy: {accuracy:.2f}')\n",
     "print('Classification Report:')\n",
     "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: I am very happy with this product.\n",
+      "Predicted Sentiment: positive\n",
+      "\n",
+      "Sentence: This is the worst purchase I have ever made.\n",
+      "Predicted Sentiment: negative\n",
+      "\n",
+      "Sentence: Absolutely fantastic, highly recommend it.\n",
+      "Predicted Sentiment: positive\n",
+      "\n",
+      "Sentence: I am so disappointed, this is terrible.\n",
+      "Predicted Sentiment: negative\n",
+      "\n",
+      "Sentence: This is a great product, very satisfied.\n",
+      "Predicted Sentiment: positive\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import re\n",
+    "from collections import defaultdict\n",
+    "from math import log\n",
+    "\n",
+    "# Generate labeled training data\n",
+    "training_data = [\n",
+    "    (\"I love this product, it is amazing!\", \"positive\"),\n",
+    "    (\"This is the best thing I have ever bought.\", \"positive\"),\n",
+    "    (\"Absolutely fantastic, I am very happy with it.\", \"positive\"),\n",
+    "    (\"I am so pleased with this purchase.\", \"positive\"),\n",
+    "    (\"This is wonderful, I highly recommend it.\", \"positive\"),\n",
+    "    (\"I am extremely satisfied with this.\", \"positive\"),\n",
+    "    (\"This is a great product, I will buy it again.\", \"positive\"),\n",
+    "    (\"I am very impressed with the quality.\", \"positive\"),\n",
+    "    (\"This is exactly what I needed, perfect!\", \"positive\"),\n",
+    "    (\"I am delighted with this item.\", \"positive\"),\n",
+    "    (\"I hate this product, it is terrible.\", \"negative\"),\n",
+    "    (\"This is the worst thing I have ever bought.\", \"negative\"),\n",
+    "    (\"Absolutely awful, I am very unhappy with it.\", \"negative\"),\n",
+    "    (\"I am so disappointed with this purchase.\", \"negative\"),\n",
+    "    (\"This is horrible, I do not recommend it.\", \"negative\"),\n",
+    "    (\"I am extremely dissatisfied with this.\", \"negative\"),\n",
+    "    (\"This is a terrible product, I will never buy it again.\", \"negative\"),\n",
+    "    (\"I am very unimpressed with the quality.\", \"negative\"),\n",
+    "    (\"This is not what I needed, awful!\", \"negative\"),\n",
+    "    (\"I am disgusted with this item.\", \"negative\")\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# Preprocess text\n",
+    "def preprocess(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r'\\b\\w{1,2}\\b', '', text)  # Remove short words\n",
+    "    text = re.sub(r'\\s+', ' ', text)  # Remove extra spaces\n",
+    "    return text.strip()\n",
+    "\n",
+    "# Train Naive Bayes classifier\n",
+    "class NaiveBayesClassifier:\n",
+    "    def __init__(self):\n",
+    "        self.classes = defaultdict(lambda: 0)\n",
+    "        self.word_counts = defaultdict(lambda: defaultdict(lambda: 0))\n",
+    "        self.class_totals = defaultdict(lambda: 0)\n",
+    "        self.vocab = set()\n",
+    "\n",
+    "    def train(self, data):\n",
+    "        for sentence, label in data:\n",
+    "            self.classes[label] += 1\n",
+    "            words = preprocess(sentence).split()\n",
+    "            for word in words:\n",
+    "                self.word_counts[label][word] += 1\n",
+    "                self.class_totals[label] += 1\n",
+    "                self.vocab.add(word)\n",
+    "\n",
+    "    def predict(self, sentence):\n",
+    "        words = preprocess(sentence).split()\n",
+    "        class_scores = {}\n",
+    "        for label in self.classes:\n",
+    "            class_scores[label] = log(self.classes[label] / sum(self.classes.values()))\n",
+    "            for word in words:\n",
+    "                word_count = self.word_counts[label][word] + 1  # Laplace smoothing\n",
+    "                class_scores[label] += log(word_count / (self.class_totals[label] + len(self.vocab)))\n",
+    "        return max(class_scores, key=class_scores.get)\n",
+    "\n",
+    "# Initialize and train the classifier\n",
+    "classifier = NaiveBayesClassifier()\n",
+    "classifier.train(training_data)\n",
+    "\n",
+    "# Test the classifier on 5 sentences\n",
+    "test_sentences = [\n",
+    "    \"I am very happy with this product.\",\n",
+    "    \"This is the worst purchase I have ever made.\",\n",
+    "    \"Absolutely fantastic, highly recommend it.\",\n",
+    "    \"I am so disappointed, this is terrible.\",\n",
+    "    \"This is a great product, very satisfied.\"\n",
+    "]\n",
+    "\n",
+    "# Predict and print the results\n",
+    "for sentence in test_sentences:\n",
+    "    prediction = classifier.predict(sentence)\n",
+    "    print(f\"Sentence: {sentence}\\nPredicted Sentiment: {prediction}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word: quality., Positive: 1, Negative: 1\n",
+      "Word: wonderful,, Positive: 1, Negative: 0\n",
+      "Word: again., Positive: 1, Negative: 1\n",
+      "Word: terrible., Positive: 0, Negative: 1\n",
+      "Word: exactly, Positive: 1, Negative: 0\n",
+      "Word: will, Positive: 1, Negative: 1\n",
+      "Word: pleased, Positive: 1, Negative: 0\n",
+      "Word: product,, Positive: 2, Negative: 2\n",
+      "Word: best, Positive: 1, Negative: 0\n",
+      "Word: not, Positive: 0, Negative: 2\n",
+      "Word: satisfied, Positive: 1, Negative: 0\n",
+      "Word: terrible, Positive: 0, Negative: 1\n",
+      "Word: extremely, Positive: 1, Negative: 1\n",
+      "Word: have, Positive: 1, Negative: 1\n",
+      "Word: highly, Positive: 1, Negative: 0\n",
+      "Word: great, Positive: 1, Negative: 0\n",
+      "Word: awful!, Positive: 0, Negative: 1\n",
+      "Word: ., Positive: 2, Negative: 2\n",
+      "Word: needed,, Positive: 1, Negative: 1\n",
+      "Word: ever, Positive: 1, Negative: 1\n",
+      "Word: recommend, Positive: 1, Negative: 1\n",
+      "Word: hate, Positive: 0, Negative: 1\n",
+      "Word: purchase., Positive: 1, Negative: 1\n",
+      "Word: disgusted, Positive: 0, Negative: 1\n",
+      "Word: with, Positive: 5, Negative: 5\n",
+      "Word: horrible,, Positive: 0, Negative: 1\n",
+      "Word: this, Positive: 7, Negative: 7\n",
+      "Word: perfect!, Positive: 1, Negative: 0\n",
+      "Word: worst, Positive: 0, Negative: 1\n",
+      "Word: thing, Positive: 1, Negative: 1\n",
+      "Word: unimpressed, Positive: 0, Negative: 1\n",
+      "Word: the, Positive: 2, Negative: 2\n",
+      "Word: absolutely, Positive: 1, Negative: 1\n",
+      "Word: what, Positive: 1, Negative: 1\n",
+      "Word: love, Positive: 1, Negative: 0\n",
+      "Word: dissatisfied, Positive: 0, Negative: 1\n",
+      "Word: unhappy, Positive: 0, Negative: 1\n",
+      "Word: buy, Positive: 1, Negative: 1\n",
+      "Word: this., Positive: 1, Negative: 1\n",
+      "Word: item., Positive: 1, Negative: 1\n",
+      "Word: fantastic,, Positive: 1, Negative: 0\n",
+      "Word: impressed, Positive: 1, Negative: 0\n",
+      "Word: delighted, Positive: 1, Negative: 0\n",
+      "Word: never, Positive: 0, Negative: 1\n",
+      "Word: amazing!, Positive: 1, Negative: 0\n",
+      "Word: very, Positive: 2, Negative: 2\n",
+      "Word: disappointed, Positive: 0, Negative: 1\n",
+      "Word: awful,, Positive: 0, Negative: 1\n",
+      "Word: bought., Positive: 1, Negative: 1\n",
+      "Word: happy, Positive: 1, Negative: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "# Initialize dictionaries to hold word counts for positive and negative sentences\n",
+    "positive_word_counts = defaultdict(int)\n",
+    "negative_word_counts = defaultdict(int)\n",
+    "\n",
+    "# Count the words in positive and negative sentences\n",
+    "for sentence, sentiment in training_data:\n",
+    "    words = preprocess(sentence).split()\n",
+    "    if sentiment == 'positive':\n",
+    "        for word in words:\n",
+    "            positive_word_counts[word] += 1\n",
+    "    else:\n",
+    "        for word in words:\n",
+    "            negative_word_counts[word] += 1\n",
+    "\n",
+    "# Combine the counts into a single dictionary for display\n",
+    "word_counts = {}\n",
+    "for word in set(positive_word_counts.keys()).union(set(negative_word_counts.keys())):\n",
+    "    word_counts[word] = {\n",
+    "        'positive': positive_word_counts[word],\n",
+    "        'negative': negative_word_counts[word]\n",
+    "    }\n",
+    "\n",
+    "# Display the word counts\n",
+    "for word, counts in word_counts.items():\n",
+    "    print(f\"Word: {word}, Positive: {counts['positive']}, Negative: {counts['negative']}\")"
    ]
   }
  ],
