--- a/notebooks/LLMs/NLP_tasks_with_llm.ipynb
+++ b/notebooks/LLMs/NLP_tasks_with_llm.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text classification with LLM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -85,6 +92,13 @@
     "    result = response['message']['content'].strip().lower()\n",
     "    print(f\"Text: {test_text}\")\n",
     "    print(f\"Classification: {result}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NER with LLM"
    ]
   },
   {
